--- a/services/index.html
+++ b/services/index.html
@@ -27,7 +27,8 @@ active: services
       <div class="col-lg-6">
 
        <img class="img-responsive center-block" src="{{"/assets/img/loopmusic.jpg" | prepend: site.url }}">
-        <h4>LOOP MUSIC</h4>
+          <h4>Details coming soon...</h4>
+<!--        <h4>LOOP MUSIC</h4>
 
         <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br/>คิดราคาตามความยาวลูปดังนี้<br/><br/>
         20-30 วินาที 350 Baht<br/>
@@ -36,7 +37,7 @@ active: services
         1:30-2:00 นาที 550 Baht<br/>
         มากกว่า 2 นาที เริ่มต้นที่600 Baht<b>***</b></p>
           
-          <!--newone!-->
+          
           <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br/></span></p>
           <p><b>1.เช่า (Single Use License) - ใช้ได้ต่อหนึ่งโปรเจกต์</b><br/>
              <b>* ราคาตามที่กำหนดด้านบน</b><br/>
@@ -50,18 +51,7 @@ active: services
             Music) และเราสามารถเอาไปใช้ต่อได้ โดยคิดราคาก็เป็นราคาเดิมตามเวลาและเพิ่ม 300 บาทเป็น ค่าใช้จ่ายในการแต่งเพลงใหม่
             (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br/><br/>เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น
             400+300 = 700 บาท</p>
-<!--         <h4>oldone!</h4>
 
-        <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br/></span>
-            1. เช่า (Single Use License) - ใช้ได้ต่อหนึ่งโปรเจกต์<br/>
-            <b>* ราคาตามที่กำหนดด้านบน</b><br/>
-            หลังการตกลงซื้อขายท่านต้องกรอกเอกสารแล้วส่งมาตามอีเมลนี้ stockmusicth@gmail.com<br/>เอกสาร&nbsp;: <a
-                    href="http://goo.gl/znVeId">http://goo.gl/xH9vK6</a><br/>
-            2. ซื้อขาด (Perpetual License) -
-            ใช้ได้ตลอดไปทุกโปรเจกต์ ราคาเราจะคิดอีกแบบนึงครับ ติดต่อมาได้ที่อีเมล stockmusicth@gmail.com</p>
-
-        <h4>end</h4>
--->
         <p>ท่านสามารถให้เราแต่งใหม่ในราคาถูกได้ โดยที่ลิขสิทธ์เพลงยังเป็นของเรา (Motion Square
             Music) อยู่และเราสามารถนำไปใช้ต่อได้ โดยคิดราคาเดิมตามเวลาและค่าใช่จ่าย 300 บาทเป็นค่าแต่งเพลงใหม่
             (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br/><br/>เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น
