--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ active: index
         <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
-        <img src="{{"/assets/img/desktop.png" | prepend: site.url }}" class="img-responsive">
+        <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive">
       </div>
     </div><!-- /row -->
   </div><!-- /container -->
