--- a/index.html
+++ b/index.html
@@ -23,16 +23,10 @@ active: index
       <h3 class="th-content text-center">ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3><br>
 
       <p class="text-justify">เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?<br><br>
-        เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด”
-        สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
-        ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
-        ที่เปิดให้คุณสามารถซื้อเพลงที่มีอยู่หรือสั่งทำใหม่และนำไปใช้ในโปรเจ็คของคุณได้ทันที
-        ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
-        เริ่มต้นที่ 350 บาท 
-        <p>
-            รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin Film Festival, Busan International Film Festival, และ Los Angeles Asia Pacific Film Festival เป็นต้น
-       </p>
-      </p><br>
+        <p>Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น</p>
+
+            <p>เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
+        <br>
       <a href="about" class="btn btn-theme center-block">Get to know us</a><br>
     </div>
     <div class="col-lg-6">
