--- a/services/index.html
+++ b/services/index.html
@@ -22,13 +22,14 @@ active: services
       <div class="hline"></div><br/><br/>
     </div><!--/col-lg-12-->
   </div><!--/row -->
-
+    
     <div class="row">
-      <div class="col-lg-6">
+             <h4>Details coming soon...</h4>
+ <!--      <div class="col-lg-6">
 
        <img class="img-responsive center-block" src="{{"/assets/img/loopmusic.jpg" | prepend: site.url }}">
-          <h4>Details coming soon...</h4>
-<!--        <h4>LOOP MUSIC</h4>
+         
+       <h4>LOOP MUSIC</h4>
 
         <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br/>คิดราคาตามความยาวลูปดังนี้<br/><br/>
         20-30 วินาที 350 Baht<br/>
