--- a/freestuffs/index.html
+++ b/freestuffs/index.html
@@ -20,7 +20,7 @@ active: freestuffs
   </div><!--/row -->
 
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-md-6">
         <p class="text-justify">เพลงฟรีจาก <a href="http://www.phil-wc.com/">Phil_wc</a> ถึงสี่อัลบั้มในแนว Ambient, Electronic, Drone, และ Experimental เพลงในอัลบั้มเหล่านี้เคยปรากฏในหนังเทศกาลต่างๆมาแล้วเช่น The 31st Vancouver Film Festival, Canada; The 56th BFI London Film Festival, Great Britain</p>
 
         <p class="text-justify">สามารถนำไปใช้ในงานที่ไม่แสวงหากำไร (non-commercial)ทุกประเภทและสามารถนำไปใช้ได้โดยไม่ต้องขออนุญาต โดยมีเงื่อนไขในการใช้ตามสามข้อด้านข้าง เงื่อนไขรวมไปถึงการนำเพลงไปใช้ในหนังอิสระเพื่อส่งประกวด ได้เช่นกัน
@@ -28,7 +28,7 @@ active: freestuffs
         
         <p>ท่านสามารถบริจาคได้ตามใจชอบโดยกรอกราคาหลังกดปุ่มดาวน์โหลดครับ</p>
     </div>
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <h4>Creative Common License</h4>
       <p><a href="http://creativecommons.org/licenses/by-nc-sa/3.0">
               <img src="http://www.jamendo.com/ui/images/libs/cc/by-nc-sa.eu.png" alt="(cc) Some Rights Reserved - Attribution-NonCommercial-ShareAlike CC BY-NC-SA">
@@ -58,7 +58,7 @@ active: freestuffs
   </div>
 
   <div class="row">  
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="freestuff-item">
         <h4>Footprints on the White Ground (2014) (EP)</h4>
         <img src="{{"/assets/img/freestuffs/footprints-ep.png" | prepend:site.url}}" alt="Footprints on the White Ground (2014) (EP)">
@@ -74,7 +74,7 @@ active: freestuffs
       </div>
     </div>
     
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="freestuff-item">      
         <h4>Science Series I: Quasar (2010)</h4>
         <img src="{{"/assets/img/freestuffs/science-series-i.png" | prepend:site.url}}" alt="Science Series I: Quasar (2010)">
