--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ active: index
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h4 class="modal-title">Infographic</h4>
+            <h4 class="modal-title">Game Loops</h4>
           </div>
           <div class="modal-body">
-            <p>Game Loops</p><p>
+            <p>GAME LOOPS</p><p>
             ในปัจจุบันเกมส์ในโทรศัพท์มือถือและ Flash game ได้รับความนิยมเป็นอย่างมาก ทำให้มีผู้ผลิตเกมส์หน้าใหม่ๆเข้ามาพัฒนาในด้านนี้มากขึ้นเรื่อยๆ ในอัลบั้มนี้เราจึงได้รวบรวมเพลงที่มีความสนุกของเกมส์สไตล์ mobile ที่สามารถลูปวนได้เรื่อยๆ เรามั่นใจว่าจะมีเพลงที่เหมาะกับเกมส์เกมส์ใหม่ของคุณแน่นอน </p>
             <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/62165436&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
           </div>
