--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@ active: index
         <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
+
         <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive">
+        <div class="youtube-showcase">
+          <iframe src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <img src="{{"/assets/img/desktop-cut.png" | prepend: site.url }}" class="img-responsive">
       </div>
     </div><!-- /row -->
   </div><!-- /container -->
