--- a/showcase/index.html
+++ b/showcase/index.html
@@ -59,13 +59,13 @@ active: showcase
 
 	<div class="row">
 		<div class="col-lg-6">
-			<div class="youtube-showcase mt">
+			<div class="youtube-fitvid mt">
 				<iframe src="//www.youtube.com/embed/7g_fYgX1rdo" frameborder="0"></iframe> <br/>
 				<iframe src="//www.youtube.com/embed/b8zAAEDGQPM" frameborder="0"></iframe>
 			</div> 
 		</div>
 		<div class="col-lg-6">
-			<div class="youtube-showcase mt">
+			<div class="youtube-fitvid mt">
 				<iframe src="//www.youtube.com/embed/Ml9bEKhOpR4" frameborder="0"></iframe> <br/>
 				<iframe src="//www.youtube.com/embed/hrdIEddLahI" frameborder="0"></iframe>
 			</div> 
