workingresponsive with fitvidsjs but not quite correct ratio

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@ active: index
         <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
-
-        <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive">
-        <div class="youtube-showcase">
+        <!-- <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive"> -->
+        <!-- screen -->
+        <div class="youtube-fitvid laptop-teaser">
           <iframe src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig" frameborder="0" allowfullscreen></iframe>
         </div>
+        <!-- laptop base -->
         <img src="{{"/assets/img/desktop-cut.png" | prepend: site.url }}" class="img-responsive">
       </div>
     </div><!-- /row -->
@@ -39,7 +40,6 @@ active: index
     </div>
   </div><!--/row -->
 </div>
-
 
 <div id="portfoliowrap">
   <h3>OUR MUSIC COLLECTION</h3>
