working responsive with bootstrap
bootstrap must be at least version 3.2

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ active: index
       <div class="col-lg-8 col-lg-offset-2 himg">
         <!-- <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive"> -->
         <!-- screen -->
-        <div class="youtube-fitvid laptop-teaser">
-          <iframe src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig" frameborder="0" allowfullscreen></iframe>
+        <div class="embed-responsive embed-responsive-16by9 laptop-teaser">
+          <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig"></iframe>
         </div>
         <!-- laptop base -->
         <img src="{{"/assets/img/desktop-cut.png" | prepend: site.url }}" class="img-responsive">
