--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ active: index
         <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
-        <!-- <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive"> -->
+        <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive">
         <!-- screen -->
         <div class="embed-responsive embed-responsive-16by9 laptop-teaser">
           <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig"></iframe>
