--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@ active: index
         <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
-        <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive">
+        <!-- <img src="{{"/assets/img/desktop2.png" | prepend: site.url }}" class="img-responsive"> -->
         <!-- screen -->
-        <div class="embed-responsive embed-responsive-16by9 laptop-teaser">
+        <!-- <div class="embed-responsive embed-responsive-16by9 laptop-teaser">
           <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig"></iframe>
+        </div> -->
+
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1 
+                      col-md-10 col-md-offset-1
+                      col-sm-10 col-sm-offset-1 
+                      col-xs-10 col-xs-offset-1 laptop-teaser">
+            <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/EeR7on9Z6Ig"></iframe>
+        </div>
+          </div>
         </div>
         <!-- laptop base -->
         <img src="{{"/assets/img/desktop-cut.png" | prepend: site.url }}" class="img-responsive">
