--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ active: index
                       col-sm-10 col-sm-offset-1 
                       col-xs-10 col-xs-offset-1 laptop-teaser">
             <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/EeR7on9Z6Ig"></iframe>
+              <iframe src="https://player.vimeo.com/video/126772167" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
           </div>
         </div>
