--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ active: index
       
       <div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
         <i class="fa fa-music"></i>
-        <h4>Original Score</h4>
-        <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
+        <h4>Custom Collection</h4>
+        <p>ประพัทธ์ชุดเพลงขึ้นมาใหม่ในแนวต่างๆเพื่อใช้ประกอบหนังหรือซีรี่ย์ ก่อนที่หนังจะตัดเสร็จเพื่อความรวดเร็ว</p>
       </div>
       
       <div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
