--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ active: index
       <div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
         <i class="fa fa-music"></i>
         <h4>Custom Collection</h4>
-        <p>ประพัทธ์ชุดเพลงขึ้นมาใหม่ในแนวต่างๆเพื่อใช้ประกอบหนังหรือซีรี่ย์ ก่อนที่หนังจะตัดเสร็จเพื่อความรวดเร็ว</p>
+        <p>ประพัทธ์ชุดเพลงขึ้นมาใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
       </div>
       
       <div class="service-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
