--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ active: index
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <br><h1>Motion Square Music</h1>
+        <br><h1>MOTION SQUARE MUSIC</h1>
         <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
