vimeo iframe options

--- a/about/index.html
+++ b/about/index.html
@@ -19,15 +19,41 @@ active: about
         </div>
 
         <div class="col-lg-6">
-            <h4>About MotionSquareMusic</h4>
+          <h4>About MotionSquareMusic</h4>
 
-            <p>Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น</p>
+          <p>Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
+          </p>
 
-            <p>เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
-<p>
-    Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง</p>
+          <p>เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด
+          </p>
+          <p>Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง
+          </p>
         </div>
     </div><!--/row -->
+</div>
+<div class="container-fluid no-padding">
+  <div class="row no-padding no-margin">
+
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 no-padding">
+      <img src="{{ "/assets/img/team/about1.jpg" | prepend: site.url}}" class="about--image" />
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 no-padding">
+      <img src="{{ "/assets/img/team/about2.jpg" | prepend: site.url}}" class="about--image" />
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 no-padding">
+      <img src="{{ "/assets/img/team/about3.jpg" | prepend: site.url}}" class="about--image" />
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 no-padding">
+      <img src="{{ "/assets/img/team/about4.jpg" | prepend: site.url}}" class="about--image" />
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 no-padding">
+      <img src="{{ "/assets/img/team/about5.jpg" | prepend: site.url}}" class="about--image" />
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 no-padding">
+      <img src="{{ "/assets/img/team/about6.jpg" | prepend: site.url}}" class="about--image" />
+    </div>
+
+  </div>
 </div>
 
 <!-- TEAM MEMBERS -->
