--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ active: index
                       col-sm-10 col-sm-offset-1 
                       col-xs-10 col-xs-offset-1 laptop-teaser">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://player.vimeo.com/video/126772167?title=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              <iframe src="https://player.vimeo.com/video/126772167?title=0&portrait=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
           </div>
         </div>
