music collection container-fluid hover

--- a/index.html
+++ b/index.html
@@ -84,28 +84,34 @@ active: index
   </section>
  -->
 
-  <section id="musiccollections-containerfluid">
+  <section id="musiccollection-containerfluid">
     <div class="container-fluid center-block">
       <div class="row">
         <div class="musiccollection [ col-lg-3 col-md-3 col-sm-6 col-xs-6 ] [ no-padding no-margin ]">
           <a data-toggle="modal" href="#portfolio-modal-cinematic">
             <img src="{{"/assets/img/portfolio/img-portfolio-altrock-250px.jpg" | prepend: site.url }}" class="img-responsive width-fullcontainer">
           </a>
+          <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-altrock"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
         </div>
+
         <div class="musiccollection [ col-lg-3 col-md-3 col-sm-6 col-xs-6 ] [ no-padding no-margin ]">
           <a data-toggle="modal" href="#portfolio-modal-infographics">          
             <img src="{{"/assets/img/portfolio/img-portfolio-cinematic-250px.jpg" | prepend: site.url }}" class="img-responsive width-fullcontainer">
           </a>
+          <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-cinematic"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
         </div>
+
         <div class="musiccollection [ col-lg-3 col-md-3 col-sm-6 col-xs-6 ] [ no-padding no-margin ]">
           <a data-toggle="modal" href="#portfolio-modal-infographics">
             <img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}" class="img-responsive width-fullcontainer">
           </a>
+          <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-infographics"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
         </div>
         <div class="musiccollection [ col-lg-3 col-md-3 col-sm-6 col-xs-6 ] [ no-padding no-margin ]">
           <a data-toggle="modal" href="#portfolio-modal-game">
             <img src="{{"/assets/img/portfolio/img-portfolio-game-250px.jpg" | prepend: site.url }}" class="img-responsive width-fullcontainer">
           </a>
+          <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-game"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
         </div>
       </div>
     </div>
