css class, some cleanup
- changing css to the new css rules, reference. CSS grouping.
- Some code comment cleanup

--- a/about/index.html
+++ b/about/index.html
@@ -3,20 +3,20 @@ layout: default
 title: About us
 active: about
 ---
-<div id="blue">
+<div id="pageheader">
   <div class="container">
     <div class="row">
-      <h3>ABOUT US</h3>
+      <h3 class="page-title">ABOUT US</h3>
     </div><!-- /row -->
   </div><!-- /container -->
 </div>
 
 <div class="container-fluid mb">
   <div class="row">
-    <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12  no-padding no-margin">
+    <div class=" [ col-lg-5 col-md-5 col-sm-6 col-xs-12 ]  [ no-padding no-margin ] ">
       <img class="img-responsive" src="{{"/assets/img/team/about-collage.png" | prepend:site.url}}" alt="collage">
     </div>
-    <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6 col-xs-12 ">
+    <div class=" [ col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6 col-xs-12 ] ">
       <h4>About Motion Square Music</h4>
 
       <p>เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเราต่างได้รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนตร์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
@@ -35,32 +35,32 @@ active: about
 <div class="container-fluid no-padding">
   <div class="row no-padding no-margin">
     <a href="{{ "/assets/img/team/about-1.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
-      <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 no-padding no-margin">
+      <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-1.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
     </a>    
     <a href="{{ "/assets/img/team/about-2.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
-      <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 no-padding no-margin">
+      <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-2.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
     </a>    
     <a href="{{ "/assets/img/team/about-3.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
-      <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 no-padding no-margin">
+      <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-3.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
     </a>    
     <a href="{{ "/assets/img/team/about-4.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
-      <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 no-padding no-margin">
+      <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-4.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
     </a>    
     <a href="{{ "/assets/img/team/about-5.jpg" | prepend: site.url }}" data-rel="prettyPhoto">
-      <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 no-padding no-margin">
+      <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-5.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
     </a>    
     <a href="{{ "/assets/img/team/about-6.jpg" | prepend: site.url }}" data-rel="prettyPhoto">    
-      <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 no-padding no-margin">
+      <div class="[ col-lg-2 col-md-2 col-sm-4 col-xs-6 ]  no-padding no-margin">
         <img src="{{ "/assets/img/team/about-6.jpg" | prepend: site.url }}" class="img-responsive about-image" />
       </div>
     </a>
@@ -72,7 +72,7 @@ active: about
 <div class="container mtb">
   <div class="row centered">
     <h3 class="mb">MEET OUR TEAM</h3>
-    <div class="composerItem col-lg-6 col-md-6 col-sm-6 col-xs-12">
+    <div class="composerItem [ col-lg-6 col-md-6 col-sm-6 col-xs-12 ] ">
       <div class="he-wrap tpl6">
         <img class="img-rounded" width="300px" src="{{"/assets/img/team/phil_aboutpg2.jpg" | prepend: site.url}}" alt="">
 
@@ -96,7 +96,7 @@ active: about
           ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA สหรัฐอเมริกา ด้านดนตรีประกอบภาพยนต์</p>
     </div><!--/col-lg-3 -->
 
-    <div class="composerItem col-lg-6 col-md-6 col-sm-6 col-xs-12">
+    <div class="composerItem [ col-lg-6 col-md-6 col-sm-6 col-xs-12 ] ">
       <div class="he-wrap tpl6">
         <img class="img-rounded" width="300px" src="{{ "/assets/img/team/bill2_aboutpg.jpg" | prepend: site.url }}" alt="">
 
