--- a/freestuffs/index.html
+++ b/freestuffs/index.html
@@ -3,10 +3,10 @@ layout: default
 title: Free Stuff
 active: freestuffs
 ---
-<div id="blue">
+<div id="pageheader">
   <div class="container">
     <div class="row">
-      <h3>FREE STUFFS</h3>
+      <h3 class="page-title">FREE STUFFS</h3>
     </div><!-- /row -->
   </div><!-- /container -->
 </div>
@@ -58,7 +58,7 @@ active: freestuffs
   </div>
 
   <div class="row">  
-    <div class="col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
       <div class="freestuff-item">
         <h4>Footprints on the White Ground (2014) (EP)</h4>
         <img src="{{"/assets/img/freestuffs/footprints-ep.png" | prepend:site.url}}" alt="Footprints on the White Ground (2014) (EP)">
@@ -74,7 +74,7 @@ active: freestuffs
       </div>
     </div>
     
-    <div class="col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
       <div class="freestuff-item">      
         <h4>Science Series I: Quasar (2010)</h4>
         <img src="{{"/assets/img/freestuffs/science-series-i.png" | prepend:site.url}}" alt="Science Series I: Quasar (2010)">
