--- a/blogs/index.html
+++ b/blogs/index.html
@@ -4,10 +4,10 @@ title: Blogs
 active: blogs
 ---
 
-<div id="blue">
+<div id="pageheader">
   <div class="container">
     <div class="row">
-      <h3>BLOGS</h3>  
+      <h3 class="page-title">BLOGS</h3>  
     </div><!-- /row -->
   </div><!-- /container -->
 </div>
