--- a/showcase/index.html
+++ b/showcase/index.html
@@ -3,10 +3,10 @@ layout: default
 title: Showcase
 active: showcase
 ---
-<div id="blue">
+<div id="pageheader">
 	<div class="container">
 		<div class="row">
-			<h3>SHOWCASE</h3>
+			<h3 class="page-title">SHOWCASE</h3>
 		</div><!-- /row -->
 	</div><!-- /container -->
 </div>
