--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ active: index
 <div class="container">
   <div class="row">
     <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
-      <h1>เคยไหมที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้</h1>
+      <h2>เคยไหมที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้</h2>
       <br/>
-      <h3>เคยไหมที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?</h3>
+      <h4>เคยไหมที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?</h4>
     </div>
     </div> 
   </div>
@@ -190,13 +190,13 @@ active: index
       <div class=" [ col-lg-3 col-md-3 col-sm-6 col-xs-12 ] service-item">
         <i class="fa fa-refresh"></i>
         <h4>Loop Music</h4>
-        <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
+        <p>เช้าดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
       </div>
       
       <div class=" [ col-lg-3 col-md-3 col-sm-6 col-xs-12 ] service-item">
         <i class="fa fa-music"></i>
         <h4>Custom Collection</h4>
-        <p>ประพัทธ์ชุดเพลงขึ้นมาใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
+        <p>ประพัoธ์ชุดเพลงขึ้นใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
       </div>
       
       <div class=" [ col-lg-3 col-md-3 col-sm-6 col-xs-12 ] service-item">
