--- a/services/index.html
+++ b/services/index.html
@@ -13,7 +13,15 @@ active: services
 
 <!-- CONTENT -->
 <div class="container mtb">
-  
+<div id="quote">
+<div class="container">
+  <div class="row">
+    <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
+      <h4>"We provide high quality music"</h4>
+    </div>
+    </div> 
+  </div>
+</div>  
   <img id="img-pageheader" class="img-responsive center-block inherit-width" src="{{"/assets/img/showcase/show5.jpg" | prepend: site.url }}">
   
   <div class="row">
