service page work in progress

--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Service &amp; Pricing
 active: services
 ---
-<div id="pageheader">
+<div id="pageheader" class="no-margin-bottom">
   <div class="container">
     <div class="row">
       <h3 class="page-title">SERVICE &amp; PRICING</h3>
@@ -12,27 +12,69 @@ active: services
 </div>
 
 <div id="quote">
-<div class="container">
-  <div class="row">
-    <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
-      <h4>"We provide high quality music"</h4>
+  <div class="container">
+    <div class="row">
+      <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
+        <h4>"We provide high quality music"</h4>
+      </div>
+      </div> 
     </div>
-    </div> 
-  </div>
 </div>  
 
 <!-- CONTENT -->
-<div class="container mtb">
-  <img id="img-pageheader" class="img-responsive center-block inherit-width" src="{{"/assets/img/showcase/show5.jpg" | prepend: site.url }}">
-  
-  <div class="row">
-    <div class="col-lg-12">
-      <h3 class="ctitle">SERVICE &amp; PRICING</h3>
-      <div class="hline"></div><br/><br/>
-    </div><!--/col-lg-12-->
-  </div><!--/row -->
-    
+<div class="contentbox-bgwhite">
+  <div class="container">
     <div class="row">
-      <div class="col-lg-12"><h4>Details coming soon...</h4></div>
-    </div><!--/row -->
+      <h1 class="text-center mb">Custom Collection</h1>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/customcol.jpg" | prepend: site.url }}">
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <p>ประพันธ์ชุดเพลงขึ้นใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
+      </div>
+    </div>
+  </div>
 </div>
+
+<div class="contentbox-bginversed">
+  <div class="container">
+    <div class="row">
+      <h1 class="text-center mb">Loop Music</h1>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <p>เช้าดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/loopmusic.jpg" | prepend: site.url }}">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="contentbox-bgwhite">
+  <div class="container">
+    <div class="row">
+      <h1 class="text-center mb">Mockup Score</h1>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/mockup.jpg" | prepend: site.url }}">
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="contentbox-bginversed">
+  <div class="container">
+    <div class="row">
+      <h1 class="text-center mb">Stock Music</h1>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง (Song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/stock.jpg" | prepend: site.url }}">
+      </div>
+    </div>
+  </div>
+</div>
+
