--- a/services/index.html
+++ b/services/index.html
@@ -27,10 +27,10 @@ active: services
     <div class="row">
       <h1 class="text-center mb">Custom Collection</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/customcol.jpg" | prepend: site.url }}">
+        <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/customcol.jpg" | prepend: site.url }}">
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p>ประพันธ์ชุดเพลงขึ้นใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
+        <h3>ชุดดนตรีที่จัดทำพิเศษขึ้นมาเพื่อใช้เฉพาะในงานของท่าน ประกอบไปด้วยธีม และเพลงอารมณ์แบบต่างๆ เหมาะกับการใช้งานประเภท TV Series, Sitcom หรือภาพยนต์ก็ได้เช่นกัน หรือท่านสามารถเลือกจาก collection ที่เรามีอยู่แล้วก็ได้ เร็วๆนี้</h3>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@ active: services
     <div class="row">
       <h1 class="text-center mb">Loop Music</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p>เช้าดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
+        <h3>ดนตรีที่สามารถวนซ้ำได้เพื่อใช้ในงาน multimedia ต่างๆเช่น เกมส์, infographic, presetation โดยให้เพลงวนซ้ำและไม่ต้องกังวลเรื่องความยาวของเพลง</h3>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/loopmusic.jpg" | prepend: site.url }}">
@@ -55,10 +55,10 @@ active: services
     <div class="row">
       <h1 class="text-center mb">Mockup Score</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/mockup.jpg" | prepend: site.url }}">
+        <div class="fitvidsjs"><iframe class="shadow-image" src="https://player.vimeo.com/video/130059898?portrait=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
+        <h4>การทำดนตรีออกมาจากโน๊ต score หรือ midi ในระดับเล็กไปจนถึงระดับ orchestra ของท่านด้วยเสียงที่สมจริงยิ่งขึ้น เพื่อที่จะใช้เป็น demo, หรือสำเร็จเป็นผลงานเลยได้เช่นกัน</h4>
       </div>
     </div>
   </div>
@@ -69,7 +69,7 @@ active: services
     <div class="row">
       <h1 class="text-center mb">Stock Music</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง (Song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
+        <h4>ดนตรีรูปแบบจบในเพลงในอารมณ์ต่างๆให้ท่านได้เลือกนำไปใช้ในภาพยนต์ หรือสื่อ multimedia มากมายเช่น Trailer, โฆษณา, เกมส์ หรือ ภาพยนต์ก็ได้เช่นกัน</h4>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <img class="img-responsive center-block shadow-image" src="{{"/assets/img/services/stock.jpg" | prepend: site.url }}">
