add css font-override rules/service pages font change

--- a/services/index.html
+++ b/services/index.html
@@ -17,12 +17,12 @@ active: services
       <div class=" [ col-lg-12 col-md-12 col-sm-12 col-xs-12 ] text-center">
         <h4>"We provide high quality music"</h4>
       </div>
-      </div> 
-    </div>
+    </div> 
+  </div>
 </div>  
 
 <!-- CONTENT -->
-<div class="contentbox-bgwhite">
+<div class="contentbox-bgwhite font-override_quark">
   <div class="container">
     <div class="row">
       <h1 class="text-center mb">Custom Collection</h1>
@@ -36,7 +36,7 @@ active: services
   </div>
 </div>
 
-<div class="contentbox-bginversed">
+<div class="contentbox-bginversed font-override_quark">
   <div class="container">
     <div class="row">
       <h1 class="text-center mb">Loop Music</h1>
@@ -50,7 +50,7 @@ active: services
   </div>
 </div>
 
-<div class="contentbox-bgwhite">
+<div class="contentbox-bgwhite font-override_quark">
   <div class="container">
     <div class="row">
       <h1 class="text-center mb">Mockup Score</h1>
@@ -64,7 +64,7 @@ active: services
   </div>
 </div>
 
-<div class="contentbox-bginversed">
+<div class="contentbox-bginversed font-override_quark">
   <div class="container">
     <div class="row">
       <h1 class="text-center mb">Stock Music</h1>
