fixed typo in service music collection

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ active: index
       <div class=" [ col-lg-3 col-md-3 col-sm-6 col-xs-12 ] service-item">
         <i class="fa fa-music"></i>
         <h4>Custom Collection</h4>
-        <p>ประพัoธ์ชุดเพลงขึ้นใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
+        <p>ประพันธ์ชุดเพลงขึ้นใหม่ในแนวอารมณ์ต่างๆเพื่อใช้ประกอบหนัง,ซีรี่ย์และเกมของท่านโดยเฉพาะ</p>
       </div>
       
       <div class=" [ col-lg-3 col-md-3 col-sm-6 col-xs-12 ] service-item">
